k8s/back-end-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: mern
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-container
          image: aliahmadshah/mern-ecommerce-backend:f479a4c711ae3437bd83a67928c0efe9f4d02829
          ports:
            - containerPort: 5000
