k8s/front-end-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: mern
spec:
  selector:
    app: frontend
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
