k8s/grafana-service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: mern
spec:
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
