k8s/mongo-db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: mern
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP
