k8s/ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: mern-ingress
  namespace: mern

spec:

  ingressClassName: nginx

  rules:

    - host: mern.local

      http:

        paths:

          # ============================
          # FRONTEND
          # ============================

          - path: /
            pathType: Prefix

            backend:

              service:
                name: frontend

                port:
                  number: 80


          # ============================
          # BACKEND
          # ============================

          - path: /api
            pathType: Prefix

            backend:

              service:
                name: backend

                port:
                  number: 5000
